Fix variations service DCHECK and add LOAD_DO_NOT_SEND_AUTH_DATA.

The DCHECK could fire if the fetch timer fires before the previous
request finished. This normally shouldn't happen - but could if
Chrome was paused (via debugger or machine suspend).

Also while changing this code, adds the LOAD_DO_NOT_SEND_AUTH_DATA
flag when making the request, which was suggested for UMA and UKM
fetches and makes sense here too - since variations server doesn't
need that info at all.

BUG=669542

Review-Url: https://codereview.chromium.org/2678783003
Cr-Commit-Position: refs/heads/master@{#448275}

Former-commit-id: 2f480d6a78ddefc9339fb90f3318a1c1b583a77c